--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<footer class="footer">
 			<p class="text-center">
 				Made with ❤️ by
-				<a href="https://purnapattela.github.io">purnapattela</a>
+				<a href="https://github.com/purnapattela" target="_blank">purnapattela</a>
 			</p>
 		</footer>
 		<script
